# hla-curation-interface

./: .gitignore  .readthedocs.yaml  .yamllint  AGENTS.md  LICENSE.md  README.md  TODO.md  biome.json  build.js  checkreadmes.py  docs.json  docs.py  justfile  package.json  plan.md  prompt.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.md  critical.md  feature.md  improvement.md
.github/actions/install-javascript-dependencies/: action.yml
.github/actions/install-python-dependencies/: action.yml
.github/workflows/: cd.yml  ci.yml  codecov.yml  coverage.yml
.github/workflows.bak/: ci.yml
docs/: design.md  how-to.md
docs/plans/: 001-draft-ep-review.md  001-ep-review.md  002-bot-protection.md
docs/prompts/: 01-bootstrap.md  02-update-specific-readme.md  03-update-all-readmes.md
docs/source/: conf.py  explanations.rst  how-to-guides.rst  index.rst  reference-guides.rst
infra/ansible/: main.yml
infra/ansible/playbooks/: deploy.yml  init.yml
infra/terraform/: .terraform.lock.hcl  ip-address.tf  main.tf  server.tf  ssh-key.tf  subdomain.tf
src/: .prettierrc.json  README.md  constants.py  manage.py
src/allele/: README.md  admin.py  apps.py  clients.py  forms.py  models.py  tests.py  urls.py  views.py
src/allele/constants/: views.py
src/allele/fixtures/: allele.json  test_alleles.json
src/allele/migrations/: 0001_initial.py  0002_allele_name_alter_allele_car_id.py  0002_allele_updated_at.py  0003_alter_allele_car_id.py  0003_historicalallele.py  0004_alter_allele_name.py  0005_allele_hrid.py  0006_alter_allele_hrid.py  0007_alter_allele_hrid.py  0008_rename_hrid_allele_slug.py
src/apps/curations/: apps.py  urls.py
src/apps/diseases/: apps.py  urls.py
src/apps/markers/: urls.py
src/apps/publications/: urls.py
src/apps/users/: urls.py
src/auth_/: README.md  admin.py  apps.py  backends.py  clerk_backend.py  forms.py  models.py  permissions.py  tests.py  urls.py  views.py
src/auth_/migrations/: 0001_initial.py  0002_userprofile_has_approval_permissions.py  0002_userprofile_updated_at.py  0003_historicaluserprofile.py
src/base/: selectors.py  views.py
src/common/: README.md  context_processors.py  history.py  tests.py
src/components/tabs/: tabs.html  tabs.py
src/config/: README.md  asgi.py  settings.py  templates.py  urls.py  wsgi.py
src/config/settings/: base.py  dev.py  prod.py
src/core/: README.md  admin.py  apps.py  crud.py  models.py  permissions.py  tests.py  urls.py  views.py
src/core/migrations/: 0001_initial.py  0002_userprofile_firebase_sign_in_provider_and_more.py  0003_remove_userprofile_firebase_display_name_and_more.py
src/curation/: README.md  admin.py  apps.py  forms.py  framework.py  interval.py  models.py  score.py  tests.py  urls.py  views.py
src/curation/constants/: score.py  views.py
src/curation/fixtures/: demographics.json  test_curations.json  test_evidence.json
src/curation/migrations/: 0001_initial.py  0002_alter_curation_allele.py  0002_alter_curation_allele_alter_curation_haplotype_and_more.py  0002_alter_evidence_has_association.py  0003_add_p_value_comparator.py  0003_curation_haplotype.py  0003_evidence_status.py  0004_alter_curation_allele_alter_curation_haplotype.py  0004_alter_evidence_p_value_comparator.py  0004_alter_evidence_status.py  0005_alter_curation_allele_alter_curation_haplotype.py  0005_alter_curation_status.py  0005_alter_evidence_curation_alter_evidence_publication.py  0005_alter_evidence_needs_review.py  0006_curation_classification_override_reason_and_more.py  0006_curation_updated_at_demographic_updated_at_and_more.py  0006_evidence_added_at_evidence_added_by.py  0007_curationstatusevent.py  0007_evidence_is_gwas_evidence_zygosity.py  0007_evidence_num_fields_evidence_num_fields_notes.py  0008_alter_evidence_options_alter_evidence_table.py  0008_historicalcuration_historicaldemographic_and_more.py  0009_curation_disease_alter_curation_allele_and_more.py  0010_alter_curation_disease.py  0011_evidence_is_gwas_notes_evidence_zygosity_notes.py  0012_curation_status_alter_evidence_is_gwas_notes_and_more.py  0013_curation_classification.py  0014_evidence_phase_confirmed_and_more.py  0015_evidence_typing_method_evidence_typing_method_notes.py  0016_evidence_p_value_alter_evidence_typing_method.py  (+27 more)
src/datatable/: admin.py  apps.py  constants.py  metadata.py  models.py  queries.py  urls.py  views.py
src/disease/: README.md  admin.py  apps.py  clients.py  forms.py  models.py  tests.py  urls.py  views.py
src/firebase/: apps.py  backends.py  clients.py  crud.py  tests.py  urls.py  views.py
src/haplotype/: README.md  admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
src/js/: firebase.js  message.js
src/publication/: README.md  admin.py  apps.py  clients.py  forms.py  models.py  tests.py  urls.py  views.py
src/publications/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
src/repo/: README.md  admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
src/static/: README.md  modal.js
src/templates/: 400.html  403.html  404.html  500.html  README.md
(+396 files in other folders)
